--- a/computermngt/computerApp/static/css/style.css
+++ b/computermngt/computerApp/static/css/style.css
@@ -1,6 +1,6 @@
 h1{
-    color: red;
+    color: rgb(255, 0, 221);
 }
 body{
-    background-color: aqua;
+    background-color: rgb(255, 0, 234);
 }
