--- a/computermngt/computerApp/templates/computerApp/machine_add.html
+++ b/computermngt/computerApp/templates/computerApp/machine_add.html
@@ -4,6 +4,7 @@
 <form method="post">
     {% csrf_token %}
 {{form.nom}}
+{{form.mach}}
 <input type="submit" value ="Submit">
 </form>
     {% endblock %}
