--- a/computermngt/computerApp/templates/index.html
+++ b/computermngt/computerApp/templates/index.html
@@ -6,20 +6,72 @@
         {% endblock %}
         <meta charset="utf-8">
         <meta name=" viewport "
-        content = " width=device-width ,
-        initial-scale=1 ">
-        {% load static %}
-        <link rel="stylesheet" href ="{% static 'css/style.css' %}">
-    </head>
-    <body>
-        {% load static %}
-        <img src="{% static '/computerApp/images/coffee.jpg' %}" alt="Logo café">
-        <img src="{% static '/computerApp/images/rond.png' %}" alt="Rond">
+        <content="width=device-width,initial-scale=1">
+          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+          crossorigin="anonymous"></script>
 
-      <h1>Django , I k*ll you !</h1>
-      
-      {% block menu %}  
-          <h2>Menu</h2>
+          {% load static %}
+
+          <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+          </head>
+          <body>
+
+          
+
+          {% block sidebar %}
+          <nav class="navbar navbar-expand-lg navbar-light bg-light border border-primary rounded">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">R&T Dev</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Ajout rapide
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="{% url 'add-machine' %}">Ajouter une machine</a></li>
+                      <li><a class="dropdown-item" href="{% url 'add-personnel' %}">Ajouter un personnel</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'machines' %}">Machines</a>
+                  </li>
+                  <li>
+                    <a class="nav-link" href="{% url 'personnels' %}">Personnels</a>
+                  </li>
+                  
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+        
+
+          {% endblock %}
+
+          {% block content %}
+
+          <h2>Contenu</h2>
+
+          Blabla de la première page
+          {% endblock %}
+          
+          </body>
+          </html>
+          {% comment %} <h2>Menu</h2>
           <ul id="menu">
               <li><a href="{% url 'index' %}">Home</a></li>
               <li><a href="{% url 'machines' %}">Machines</a></li>
@@ -27,8 +79,8 @@
               <li><a href="{% url 'add-machine' %}">Ajouter une machine</a></li>
               <li><a href="{% url 'add-personnel' %}">Ajouter un personnel</a></li>
 
-          </ul>
-      {% endblock %}
+          </ul> {% endcomment %}
+      {% comment %} {% endblock %}
 
       {% block content %}
             {% for machine in machines %}
@@ -41,7 +93,7 @@
             <p><b>{{personnels.N_secu}}</b> {{personnels.nom}}
             </p>
             {% endfor %}
-      {% endblock %}
+      {% endblock %} {% endcomment %}
         
      </body>
     </html>
