Ajout de paramètre dans les classes personnel et machine
Ajout de paramètre dans les classes personnel et machine 
Amélioration visuel du rendu de l'ajout de machine

--- a/computermngt/computerApp/templates/computerApp/personnel_add.html
+++ b/computermngt/computerApp/templates/computerApp/personnel_add.html
@@ -5,6 +5,9 @@
     {% csrf_token %}
     {{form.secu}}
     {{form.nom}}
+    {{form.prenom}}
+    {{form.genre}}
+    {{form.site}}
 <input type="submit" value ="Envoyer">
 </form>
     {% endblock %}
