--- a/computermngt/computerApp/templates/computerApp/machine_add.html
+++ b/computermngt/computerApp/templates/computerApp/machine_add.html
@@ -1,10 +1,134 @@
-{% extends "index.html"%}
+{% extends 'index.html' %}
+
+{% block content %}
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class= "card text-white bg-secondary mt-5">
+        <div class="card-header">
+          <h3 class="card-title row justify-content-center mt-2">Ajout d'une machine</h3>
+        </div>
+        <div class="card-body ">
+          <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+            <label for="nom">Nom de machine:</label>
+            <input class="form-control" type="text" placeholder="Le nom de la machine" name="nom">
+            </div>
+            <div class="form-group">
+                <p>Type de machine:</p>
+                <label for="{{ form.mach.id_for_label }}"></label>
+                {{ form.mach }}
+              </div>
+            <button type="submit" class="btn btn-primary mt-4">Enregistrer</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% comment %} {% extends 'index.html' %}
+
+{% block content %}
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card mt-4">
+        <div class="card-header">
+          <h4 class="card-title row justify-content-center">Ajout d'une machine</h4>
+        </div>
+        <div class="card-body black">
+          <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <p>Nom:</p>
+              <label for="{{ form.nom.id_for_label }}"></label>
+              {{ form.nom }}
+            </div>
+            <div class="form-group">
+                <p>Type de machine:</p>
+                <label for="{{ form.mach.id_for_label }}"></label>
+                {{ form.mach }}
+              </div>
+            <button type="submit" class="btn btn-primary">Enregistrer</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %} {% endcomment %}
+
+
+
+    {% comment %} {% extends 'index.html' %}
+
+{% block content %}
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class= "card text-white bg-secondary mt-5">
+        <div class="card-header">
+          <h3 class="card-title row justify-content-center mt-2">Ajout d'une machine</h3>
+        </div>
+        <div class="card-body ">
+          <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+            <label for="nom">Nom de machine:</label>
+            <input class="form-control" type="text" placeholder="Le nom de la machine" name="form.nom">
+            </div>
+            <div class="form-group">
+                <p>Type de machine:</p>
+                <label for="{{ form.mach.id_for_label }}"></label>
+                {{ form.mach }}
+              </div>
+            <button type="submit" class="btn btn-primary mt-4">Enregistrer</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %} {% endcomment %} 
+
+{% comment %} {% extends "index.html"%}
 
 {% block content%}
 <form method="post">
     {% csrf_token %}
-{{form.nom}}
+ <h1>Nom de la machine<h1>
+    {{form.nom}}
+ <h1>Choix du materiel<h1>
 {{form.mach}}
-<input type="submit" value ="Submit">
+<input type="submit" value ="Envoyer">
 </form>
-    {% endblock %}
+    {% endblock %} 
+ {% endcomment %}
