Améliroation des possibilités pour la création d'utilisateur et Personnel
Améliroation des possibilités pour la création d'utilisateur et Personnel

Ajout de champs standard
Ajout de champs avec clé étrangère pour associer un utilisateur à une machine

--- a/computermngt/computerApp/templates/computerApp/personnel_add.html
+++ b/computermngt/computerApp/templates/computerApp/personnel_add.html
@@ -3,11 +3,14 @@
 {% block content%}
 <form method="post">
     {% csrf_token %}
-    {{form.secu}}
     {{form.nom}}
     {{form.prenom}}
     {{form.genre}}
     {{form.site}}
+    {{form.machinep}}
+    {{form.role}}
+    {{form.email}}
+    {{form.telephone}}
 <input type="submit" value ="Envoyer">
 </form>
     {% endblock %}
