--- a/computermngt/computerApp/templates/computerApp/machine_add.html
+++ b/computermngt/computerApp/templates/computerApp/machine_add.html
@@ -23,6 +23,7 @@
             <button type="submit" class="btn btn-primary mt-4">Enregistrer</button>
           </form>
         </div>
+        {{form.personnel}}
       </div>
     </div>
   </div>
