Avancement dans les views/forms et surtout affichage html
Avancement dans les views/forms et surtout affichage html de perssonel_add et machine_add

--- a/computermngt/computerApp/templates/computerApp/personnel_list.html
+++ b/computermngt/computerApp/templates/computerApp/personnel_list.html
@@ -6,8 +6,8 @@
   <ul>
     {% for personnel in personnels %}
         <li>
-          <a href="{% url 'personnel-detail' personnel.secu %}">
-         {{ personnel.secu }} - ({{ personnel.nom }})
+          <a href="{% url 'personnel-detail' personnel.id %}">
+         {{ personnel.id }} - ({{ personnel.nom }})
         </li>
     {% endfor %}
     </ul>
