--- a/computermngt/computerApp/templates/computerApp/machine_add.html
+++ b/computermngt/computerApp/templates/computerApp/machine_add.html
@@ -1,135 +1,61 @@
-{% extends 'index.html' %}
+{% extends "index.html" %}
 
 {% block content %}
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class= "card text-white bg-secondary mt-5">
+    <div class="col-md-4">
+      <div class="card text-center mt-5" style="background-color: #f8f9fa;">
         <div class="card-header">
-          <h3 class="card-title row justify-content-center mt-2">Ajout d'une machine</h3>
+          <h4 class="card-title" style="font-size: 20px;">Ajouter une machine</h4>
         </div>
-        <div class="card-body ">
+        <div class="card-body">
           <form method="post">
             {% csrf_token %}
-            <div class="form-group">
-            <label for="nom">Nom de machine:</label>
-            <input class="form-control" type="text" placeholder="Le nom de la machine" name="nom">
-            </div>
-            <div class="form-group">
-                <p>Type de machine:</p>
-                <label for="{{ form.mach.id_for_label }}"></label>
-                {{ form.mach }}
-              </div>
-            <button type="submit" class="btn btn-primary mt-4">Enregistrer</button>
-          </form>
-        </div>
-        {{form.personnel}}
-      </div>
-    </div>
-  </div>
-</div>
-{% endblock %} 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-{% comment %} {% extends 'index.html' %}
-
-{% block content %}
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card mt-4">
-        <div class="card-header">
-          <h4 class="card-title row justify-content-center">Ajout d'une machine</h4>
-        </div>
-        <div class="card-body black">
-          <form method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <p>Nom:</p>
-              <label for="{{ form.nom.id_for_label }}"></label>
+            
+            <div class="border-bottom mb-3">
+              <label for="{{ form.nom.id_for_label }}" class="form-label">{{ form.nom.label }}</label>
               {{ form.nom }}
             </div>
-            <div class="form-group">
-                <p>Type de machine:</p>
-                <label for="{{ form.mach.id_for_label }}"></label>
-                {{ form.mach }}
-              </div>
-            <button type="submit" class="btn btn-primary">Enregistrer</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-{% endblock %} {% endcomment %}
-
-
-
-    {% comment %} {% extends 'index.html' %}
-
-{% block content %}
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class= "card text-white bg-secondary mt-5">
-        <div class="card-header">
-          <h3 class="card-title row justify-content-center mt-2">Ajout d'une machine</h3>
-        </div>
-        <div class="card-body ">
-          <form method="post">
-            {% csrf_token %}
-            <div class="form-group">
-            <label for="nom">Nom de machine:</label>
-            <input class="form-control" type="text" placeholder="Le nom de la machine" name="form.nom">
+            
+            <div class="border-bottom mb-3">
+              <label for="{{ form.mach.id_for_label }}" class="form-label">{{ form.mach.label }}</label>
+              {{ form.mach }}
             </div>
-            <div class="form-group">
-                <p>Type de machine:</p>
-                <label for="{{ form.mach.id_for_label }}"></label>
-                {{ form.mach }}
-              </div>
-            <button type="submit" class="btn btn-primary mt-4">Enregistrer</button>
+            
+            <div class="border-bottom mb-3">
+              <label for="{{ form.address_ip.id_for_label }}" class="form-label">{{ form.address_ip.label }}</label>
+              {{ form.address_ip }}
+            </div>
+            
+            <div class="border-bottom mb-3">
+              <label for="{{ form.personnel.id_for_label }}" class="form-label">{{ form.personnel.label }}</label>
+              {{ form.personnel }}
+            </div>
+            
+            <div class="border-bottom mb-3">
+              <label for="{{ form.site.id_for_label }}" class="form-label">{{ form.site.label }}</label>
+              {{ form.site }}
+            </div>
+            
+            <div class="border-bottom mb-3">
+              <label for="{{ form.administrateur.id_for_label }}" class="form-label">{{ form.administrateur.label }}</label>
+              {{ form.administrateur }}
+            </div>
+            
+            <div class="border-bottom mb-3">
+              <label for="{{ form.creation_date.id_for_label }}" class="form-label">{{ form.creation_date.label }}</label>
+              {{ form.creation_date }}
+            </div>
+            
+            <div class="d-flex justify-content-end">
+              <button type="submit" class="btn btn-primary">Enregistrer</button>
+              <a href="{% url 'index' %}" class="btn btn-danger ms-2" onclick="return confirm('Êtes-vous sûr de vouloir quitter ? Les données vont être perdues.');">Annuler</a>
+            </div>
+            
           </form>
         </div>
       </div>
     </div>
   </div>
 </div>
-{% endblock %} {% endcomment %} 
-
-{% comment %} {% extends "index.html"%}
-
-{% block content%}
-<form method="post">
-    {% csrf_token %}
- <h1>Nom de la machine<h1>
-    {{form.nom}}
- <h1>Choix du materiel<h1>
-{{form.mach}}
-<input type="submit" value ="Envoyer">
-</form>
-    {% endblock %} 
- {% endcomment %}
+{% endblock %}
