--- a/computermngt/computerApp/templates/computerApp/personnel_add.html
+++ b/computermngt/computerApp/templates/computerApp/personnel_add.html
@@ -1,16 +1,105 @@
-{% extends "index.html"%}
+{% extends "index.html" %}
 
-{% block content%}
-<form method="post">
-    {% csrf_token %}
-    {{form.nom}}
-    {{form.prenom}}
-    {{form.genre}}
-    {{form.site}}
-    {{form.machinep}}
-    {{form.role}}
-    {{form.email}}
-    {{form.telephone}}
-<input type="submit" value ="Envoyer">
-</form>
-    {% endblock %}
+{% block content %}
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-7">
+      <div class="card mt-5 mx-auto">
+        <div class="card-header">
+          <h3 class="card-title text-center">Ajout d'un personnel</h3>
+        </div>
+        <div class="card-body">
+          <form method="post">
+            {% csrf_token %}
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.nom.id_for_label }}">Nom:</label>
+                  {{ form.nom }}
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.prenom.id_for_label }}">Prénom:</label>
+                  {{ form.prenom }}
+                </div>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.genre.id_for_label }}">Genre:</label>
+                  {{ form.genre }}
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.site.id_for_label }}">Site:</label>
+                  {{ form.site }}
+                </div>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.machine.id_for_label }}">Machine attribuée:</label>
+                  {{ form.machine }}
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.role.id_for_label }}">Rôle:</label>
+                  {{ form.role }}
+                </div>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.email.id_for_label }}">Email:</label>
+                  {{ form.email }}
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.telephone.id_for_label }}">Numéro de téléphone:</label>
+                  {{ form.telephone }}
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#cancelModal">
+                  Annuler
+                </button>
+              </div>
+              <div class="col-md-6 text-md-end">
+                <button type="submit" class="btn btn-primary">Enregistrer</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="cancelModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="cancelModalLabel">Êtes-vous sûr de vouloir quitter ?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Les données seront perdues.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-danger" onclick="window.location.href='{% url 'index' %}'">Quitter</button>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
