--- a/computermngt/computerApp/templates/computerApp/personnel_detail.html
+++ b/computermngt/computerApp/templates/computerApp/personnel_detail.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <h1>Nom: {{ personnel.nom }} </h1>
-<p> <strong>Id</strong> :{{personnel.secu}} </a></p>
+<p> <strong>Id</strong> :{{personnel.id}} </a></p>
 
 {% endblock %}
