--- a/computermngt/computerApp/templates/index.html
+++ b/computermngt/computerApp/templates/index.html
@@ -1,157 +1,68 @@
-<!DOCTYPE html >
-<html lang = "fr">
-    <head>
-        {% block title %}
-        <title>Computer Management</title>
-        {% endblock %}
-        <meta charset="utf-8">
-        <meta name=" viewport "
-        <content="width=device-width,initial-scale=1">
-          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    {% block title %}
+    <title>Computer Management</title>
+    {% endblock %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           crossorigin="anonymous">
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-          crossorigin="anonymous"></script>
-
-          {% load static %}
-
-          <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-
-          </head>
-          <body>
-
-          
-
-          {% block sidebar %}
-          <nav class="navbar navbar-expand-lg navbar-light bg-light border border-primary rounded">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">R&T Dev</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
+    {% comment %} <link rel="stylesheet" href="{% static 'css/style.css' %}"> {% endcomment %}
+</head>
+<body>
+{% block sidebar %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light border border-primary rounded">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">R&T Dev</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
                     <a class="nav-link" href="#">Home</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Ajout rapide
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Ajout rapide
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="{% url 'add-machine' %}">Ajouter une machine</a></li>
-                      <li><a class="dropdown-item" href="{% url 'add-personnel' %}">Ajouter un personnel</a></li>
+                        <li><a class="dropdown-item" href="{% url 'add-machine' %}">Ajouter une machine</a></li>
+                        <li><a class="dropdown-item" href="{% url 'add-personnel' %}">Ajouter un personnel</a></li>
                     </ul>
-                  </li>
-                  <li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'machines' %}">Machines</a>
-                  </li>
-                  <li>
+                </li>
+                <li>
                     <a class="nav-link" href="{% url 'personnels' %}">Personnels</a>
-                  </li>
-                  
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-
-        
-
-          {% endblock %}
-
-          {% block content %}
-
-          <h2>Contenu</h2>
-
-          Blabla de la première page
-          {% endblock %}
-          
-          </body>
-          </html>
-          {% comment %} <h2>Menu</h2>
-          <ul id="menu">
-              <li><a href="{% url 'index' %}">Home</a></li>
-              <li><a href="{% url 'machines' %}">Machines</a></li>
-              <li><a href="{% url 'personnels' %}">Personnels</a></li>
-              <li><a href="{% url 'add-machine' %}">Ajouter une machine</a></li>
-              <li><a href="{% url 'add-personnel' %}">Ajouter un personnel</a></li>
-
-          </ul> {% endcomment %}
-      {% comment %} {% endblock %}
-
-      {% block content %}
-            {% for machine in machines %}
-            
-            <p>
-            <b> {{machine.id}}</b> {{machine.nom}}   
-            {% endfor %}
-
-            {% for personnels in personnels %}
-            <p><b>{{personnels.N_secu}}</b> {{personnels.nom}}
-            </p>
-            {% endfor %}
-      {% endblock %} {% endcomment %}
-        
-     </body>
-    </html>
-
-
-   
-
-
-    <!-- <!DOCTYPE html>
-    <html lang="fr">
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Page de connexion</title>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha384-XXXXX" crossorigin="anonymous">
-      <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Mon site</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Accueil</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Qui sommes nous ?</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Administration</a>
-              </li>
+                </li>
             </ul>
-          </div>
         </div>
-      </nav>
-      <div class="container mt-5">
-        <div class="row justify-content-center">
-          <div class="col-md-6">
-            <form>
-              <div class="mb-3">
-                <label for="email" class="form-label">Adresse email</label>
-                <input type="email" class="form-control" id="email" name="email" required>
-              </div>
-              <div class="mb-3">
-                <label for="password" class="form-label">Mot de passe</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-              </div>
-              <button type="submit" class="btn btn-primary">Se connecter</button>
-            </form>
-          </div>
-        </div>
-      </div>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha384-XXXXX" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js" integrity="sha384-XXXXX" crossorigin="anonymous"></script>
-    </body>
-    </html> -->
-    
+    </div>
+</nav>
+{% endblock %}
+
+{% block content %}
+<div class="container mt-4">
+    <h2>Contenu</h2>
+    <p>Blabla de la première page</p>
+    {% for machine in machines %}
+    <p><b>{{ machine.id }}</b> {{ machine.nom }}</p>
+    {% endfor %}
+    {% for personnels in personnels %}
+    <p><b>{{ personnels.N_secu }}</b> {{ personnels.nom }}</p>
+    {% endfor %}
+</div>
+{% endblock %}
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+</html>
