--- a/computermngt/computerApp/templates/computerApp/infra_add.html
+++ b/computermngt/computerApp/templates/computerApp/infra_add.html
@@ -1,1 +1,92 @@
-{% extends "index.html"%}
+{% extends "index.html" %}
+
+{% block content %}
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-7">
+      <div class="card mt-5 mx-auto">
+        <div class="card-header">
+          <h3 class="card-title text-center">Ajout d'une infrastructure</h3>
+        </div>
+        <div class="card-body">
+          <form method="post">
+            {% csrf_token %}
+            {% if form.errors %}
+            <div class="alert alert-danger" role="alert">
+              <ul>
+                {% for field in form %}
+                {% for error in field.errors %}
+                <li>{{ error }}</li>
+                {% endfor %}
+                {% endfor %}
+              </ul>
+            </div>
+            {% endif %}
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.nom.id_for_label }}">Nom :</label>
+                  <input type="text" name="{{ form.nom.name }}" id="{{ form.nom.id_for_label }}" value="{{ form.nom.value }}" class="form-control">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.site.id_for_label }}">Site :</label>
+                  {{ form.site }}
+                </div>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.administrateur.id_for_label }}">Administrateur :</label>
+                  {{ form.administrateur }}
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="{{ form.machines.id_for_label }}">Machines :</label>
+                  <select name="{{ form.machines.name }}" id="{{ form.machines.id_for_label }}" multiple class="form-select">
+                    {% for machine in form.machines.field.queryset %}
+                      <option value="{{ machine.pk }}">{{ machine }}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#cancelModal">
+                  Annuler
+                </button>
+              </div>
+              <div class="col-md-6 text-md-end">
+                <button type="submit" class="btn btn-primary">Enregistrer</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="cancelModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="cancelModalLabel">Êtes-vous sûr de vouloir quitter ?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Les données seront perdues.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-danger" onclick="window.location.href='{% url 'index' %}'">Quitter</button>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
