--- a/computermngt/computerApp/templates/computerApp/machine_add.html
+++ b/computermngt/computerApp/templates/computerApp/machine_add.html
@@ -11,49 +11,93 @@
         <div class="card-body">
           <form method="post">
             {% csrf_token %}
-            
+
+            {% if form.errors %}
+            <div class="alert alert-danger" role="alert">
+              <ul>
+                {% for field in form %}
+                  {% for error in field.errors %}
+                  <li>{{ error }}</li>
+                  {% endfor %}
+                {% endfor %}
+              </ul>
+            </div>
+            {% endif %}
+
             <div class="border-bottom mb-3">
               <label for="{{ form.nom.id_for_label }}" class="form-label">{{ form.nom.label }}</label>
               {{ form.nom }}
             </div>
-            
+
             <div class="border-bottom mb-3">
               <label for="{{ form.mach.id_for_label }}" class="form-label">{{ form.mach.label }}</label>
               {{ form.mach }}
             </div>
-            
+
             <div class="border-bottom mb-3">
               <label for="{{ form.address_ip.id_for_label }}" class="form-label">{{ form.address_ip.label }}</label>
               {{ form.address_ip }}
             </div>
-            
+
             <div class="border-bottom mb-3">
               <label for="{{ form.personnel.id_for_label }}" class="form-label">{{ form.personnel.label }}</label>
               {{ form.personnel }}
             </div>
-            
+
             <div class="border-bottom mb-3">
               <label for="{{ form.site.id_for_label }}" class="form-label">{{ form.site.label }}</label>
               {{ form.site }}
             </div>
-            
+
             <div class="border-bottom mb-3">
               <label for="{{ form.administrateur.id_for_label }}" class="form-label">{{ form.administrateur.label }}</label>
               {{ form.administrateur }}
             </div>
-            
+
             <div class="border-bottom mb-3">
               <label for="{{ form.creation_date.id_for_label }}" class="form-label">{{ form.creation_date.label }}</label>
               {{ form.creation_date }}
             </div>
-            
-            <div class="d-flex justify-content-end">
-              <button type="submit" class="btn btn-primary">Enregistrer</button>
-              <a href="{% url 'index' %}" class="btn btn-danger ms-2" onclick="return confirm('Êtes-vous sûr de vouloir quitter ? Les données vont être perdues.');">Annuler</a>
+
+            <div class="row justify-content-between">
+              <div class="col-md-4">
+                <div class="text-start">
+                  <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#cancelModal">
+                    Annuler
+                  </button>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="text-center">
+                  <p class="m-0">(*) Champs obligatoires</p>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="text-end">
+                  <button type="submit" class="btn btn-primary">Enregistrer</button>
+                </div>
+              </div>
             </div>
-            
+
           </form>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="cancelModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="cancelModalLabel">Êtes-vous sûr de vouloir quitter ?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Les données seront perdues.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-danger" onclick="window.location.href='{% url 'index' %}'">Quitter</button>
       </div>
     </div>
   </div>
