--- a/computermngt/computerApp/templates/computerApp/personnel_add.html
+++ b/computermngt/computerApp/templates/computerApp/personnel_add.html
@@ -25,13 +25,13 @@
             <div class="row mb-3">
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="{{ form.nom.id_for_label }}">Nom:</label>
+                  <label for="{{ form.nom.id_for_label }}">(*)Nom:</label>
                   <input type="text" name="{{ form.nom.name }}" id="{{ form.nom.id_for_label }}" value="{{ form.nom.value }}" class="form-control">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="{{ form.prenom.id_for_label }}">Prénom:</label>
+                  <label for="{{ form.prenom.id_for_label }}">(*)Prénom:</label>
                   <input type="text" name="{{ form.prenom.name }}" id="{{ form.prenom.id_for_label }}" value="{{ form.prenom.value }}" class="form-control">
                 </div>
               </div>
@@ -39,13 +39,13 @@
             <div class="row mb-3">
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="{{ form.genre.id_for_label }}">Genre:</label>
+                  <label for="{{ form.genre.id_for_label }}">(*)Genre:</label>
                   {{ form.genre }}
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="{{ form.site.id_for_label }}">Site:</label>
+                  <label for="{{ form.site.id_for_label }}">(*)Site:</label>
                   {{ form.site }}
                 </div>
               </div>
@@ -59,7 +59,7 @@
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="{{ form.role.id_for_label }}">Rôle:</label>
+                  <label for="{{ form.role.id_for_label }}">(*)Rôle:</label>
                   {{ form.role }}
                 </div>
               </div>
@@ -67,7 +67,7 @@
             <div class="row mb-3">
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="{{ form.email.id_for_label }}">Email:</label>
+                  <label for="{{ form.email.id_for_label }}">(*)Email:</label>
                   <input type="email" name="{{ form.email.name }}" id="{{ form.email.id_for_label }}" value="{{ form.email.value }}" class="form-control">
                 </div>
               </div>
@@ -78,14 +78,23 @@
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-md-6">
-                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#cancelModal">
-                  Annuler
-                </button>
+            <div class="row justify-content-between">
+              <div class="col-md-4">
+                <div class="text-start">
+                  <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#cancelModal">
+                    Annuler
+                  </button>
+                </div>
               </div>
-              <div class="col-md-6 text-md-end">
-                <button type="submit" class="btn btn-primary">Enregistrer</button>
+              <div class="col-md-4">
+                <div class="text-center">
+                  <p class="m-0">(*)Champs obligatoires</p>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="text-end">
+                  <button type="submit" class="btn btn-primary">Enregistrer</button>
+                </div>
               </div>
             </div>
           </form>
@@ -94,7 +103,6 @@
     </div>
   </div>
 </div>
-
 <!-- Modal -->
 <div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="cancelModalLabel" aria-hidden="true">
   <div class="modal-dialog">
