--- a/computermngt/computerApp/templates/index.html
+++ b/computermngt/computerApp/templates/index.html
@@ -34,6 +34,8 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{% url 'add-machine' %}">Ajouter une machine</a></li>
                         <li><a class="dropdown-item" href="{% url 'add-personnel' %}">Ajouter un personnel</a></li>
+                        <li><a class="dropdown-item" href="{% url 'add-infra' %}">Ajouter une infrastructure</a></li>
+
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -42,6 +44,11 @@
                 <li>
                     <a class="nav-link" href="{% url 'personnels' %}">Personnels</a>
                 </li>
+                 <li>
+                    <a class="nav-link" href="{% url 'infrastructures' %}">Infrastructure</a>
+                </li>
+                
+
             </ul>
         </div>
     </div>
