--- a/computermngt/computerApp/templates/computerApp/delete_machine.html
+++ b/computermngt/computerApp/templates/computerApp/delete_machine.html
@@ -8,6 +8,6 @@
 <form method="POST" action="{% url 'delete_machine' machine.id %}">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Oui</button>
-    <a href="{% url 'machine_list' %}" class="btn btn-primary">Non</a>
+    <a href="{% url 'machines' %}" class="btn btn-primary">Non</a>
 </form>
 {% endblock %}
