--- a/computermngt/computerApp/templates/index.html
+++ b/computermngt/computerApp/templates/index.html
@@ -10,13 +10,16 @@
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           crossorigin="anonymous">
-    {% comment %} <link rel="stylesheet" href="{% static 'css/style.css' %}"> {% endcomment %}
 </head>
 <body>
 {% block sidebar %}
+{% load static%}
 <nav class="navbar navbar-expand-lg navbar-light bg-light border border-primary rounded">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">R&T Dev</a>
+        <a class="navbar-brand" href="#">
+            <img src="{% static 'computerApp/images/logo.PNG' %}" alt="Logo" class="d-inline-block align-text-top" style="height: 1.5rem;">
+            R&T Dev
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,20 +38,17 @@
                         <li><a class="dropdown-item" href="{% url 'add-machine' %}">Ajouter une machine</a></li>
                         <li><a class="dropdown-item" href="{% url 'add-personnel' %}">Ajouter un personnel</a></li>
                         <li><a class="dropdown-item" href="{% url 'add-infra' %}">Ajouter une infrastructure</a></li>
-
                     </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'machines' %}">Machines</a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'personnels' %}">Personnels</a>
                 </li>
-                 <li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'infrastructures' %}">Infrastructure</a>
                 </li>
-                
-
             </ul>
         </div>
     </div>
