Finalisation personnel_list machine_list et infra_list
Finalisation personnel_list machine_list et infra_list manque plus que la gestion des màj sur les mahines et infrastructure. Et la base sera terminé (on ouuuublie pas le login bien sur)

--- a/computermngt/computerApp/templates/computerApp/infra_detail.html
+++ b/computermngt/computerApp/templates/computerApp/infra_detail.html
@@ -1,10 +1,15 @@
 {% extends "index.html" %}
 
 {% block content %}
+<div class="container">
+  <h1>Infrastructure : {{ infrastructure.nom }}</h1>
+  <p>Site : {{ infrastructure.site }}</p>
 
-<h1>Nom: {{infrastructure.name}} </h1>
-<p> <strong>Id</strong> :{{infrastructure.id}} </a></p>
-
-
-
+  <h2>Machines :</h2>
+  <ul>
+    {% for machine in machines %}
+    <li>{{ machine.nom }}</li>
+    {% endfor %}
+  </ul>
+</div>
 {% endblock %}
