--- a/computermngt/computerApp/templates/computerApp/personnel_detail.html
+++ b/computermngt/computerApp/templates/computerApp/personnel_detail.html
@@ -1,7 +1,24 @@
 {% extends "index.html" %}
 
 {% block content %}
-<h1>Nom: {{ personnel.nom }} </h1>
-<p> <strong>Id</strong> :{{personnel.id}} </a></p>
+
+<div class="card text-center mx-auto mt-5" style="max-width: 400px; border: 2px solid black; border-radius: 10px;">
+  <div class="card-body">
+    <h1 class="card-title">{{ personnel.nom }}  {{personnel.prenom}}</h1>
+    <hr class="nav-border">
+    <p class="card-text"><strong>Machine attitré:</strong> {{ personnel.machine }}</p>
+    <hr class="nav-border">
+    <p class="card-text"><strong>Site:</strong> {{ personnel.site }}</p>
+    <hr class="nav-border">
+    <p class="card-text"><strong>E-mail</strong> {{ personnel.email }}</p>
+    <hr class="nav-border">
+    <p class="card-text"><strong>Telephone:</strong> {{ personnel.telephone }}</p>
+    <hr class="nav-border">
+    <p class="card-text"><strong>Role:</strong> {{ personnel.role }}</p>
+  </div>
+  <div class="card-footer text-end">
+    <a href="{% url 'personnels' %}" class="btn btn-danger">Quitter</a>
+  </div>
+</div>
 
 {% endblock %}
