Ajout de la feature affichage météo sur les deux sites de R&T dev
Ajout de la feature affichage météo sur les deux sites de R&T dev

--- a/computermngt/computerApp/templates/index.html
+++ b/computermngt/computerApp/templates/index.html
@@ -50,7 +50,7 @@
                     <a class="nav-link" href="{% url 'infrastructures' %}">Infrastructure</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'network' %}">Calcul Réseaux</a>
+                    <a class="nav-link" href="{% url 'meteo' %}">Meteo</a>
                 </li>
             </ul>
         </div>
